frontend/src/components/Tweet/Tweet.css
.completeTweet {
    color: black;
    border-radius: 1%;
    border-style: solid;
    border-color: black;
    background-color:antiquewhite;
    margin-bottom: 1%;
}

.TweetTitle {
    padding: 1%;
    border-bottom: 1%;
    border-bottom-style: solid;
    border-color: black;
    display: flex;
}

.TweetContent {
    padding: 1%;
    text-align: left;
}

.QuotedTweetContent {
    margin-left: 10%;
    width: 88%;
    padding: 1%;
    text-align: left;
    font-size: 90%;
    margin-top: '5%'
}

.TweetFooter {
    padding: 1%;
    display: flex;
    border-top: 1%;
    border-color: black;
    border-top-style: solid;
}

.TweetStateBanner {
    padding: 1%;
    border-bottom-style: solid;
    border-bottom: 1%;
    border-color: grey;
    text-align: left;
}

.TweetStateBannerQuote {
    padding: 1%;
    text-align: left;
}

.QuoteBody {
    padding: 1%;
    margin-bottom: 5%;
    border-bottom-style: solid;
    border-bottom: 1%;
    border-color: grey;
}

.TweetArticleContainer {
    border-top-style: solid;
    border-top: 1%;
    border-color: grey;
}

.TweetImage {
    max-width: 100%;
    min-width: 100%;
    /* object-fit: contain; */
}

